--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,16 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+@mixin button() {
+  background-color: #090979;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -64,13 +74,7 @@ body {
       }
 
       button {
-        background-color: #090979;
-        color: white;
-        padding: 10px;
-        font-weight: bold;
-        border: none;
-        border-radius: .5rem;
-        cursor: pointer;
+        @include button();
       }
 
       label {
@@ -110,5 +114,93 @@ body {
     display: flex;
     overflow: hidden;
 
+    .sidebar {
+      flex: 1;
+      background-color: #3e3c61;
+      position: relative;
+
+      .navbar {
+        display: flex;
+        align-items: center;
+        background-color: #2f2d52;
+        height: 50px;
+        padding: 10px;
+        justify-content: space-between;
+        color: #ddddf7;
+
+        .logo {
+          font-weight: bold;
+        }
+
+        .user {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          span {
+            font-size: .8rem;
+          }
+
+          button {
+            @include button();
+            background-color: #5d5b8d;
+            color: #ddddf7;
+            border: none;
+            cursor: pointer;
+          }
+        }
+      }
+
+      .search {
+        border-bottom: 1px solid gray;
+
+        .searchForm {
+          padding: 10px;
+
+          input {
+            background-color: transparent;
+            border: none;
+            color: white;
+            outline: none;
+
+            &::placeholder {
+              color: lightgray;
+            }
+          }
+        }
+      }
+
+      .userChat {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #2f2d52;
+        }
+
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        .userChatInfo {
+          span {
+            font-size: 18px;
+            font-weight: 500;
+          }
+
+          p {
+            font-size: 12px;
+            color: lightgray;
+          }
+        }
+      }
+    }
   }
 }
