Setting firebase and create handleSubmit in Register

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,6 +107,12 @@ body {
           width: 32px;
         }
       }
+
+      .error-auth {
+        font-size: .8rem;
+        text-align: center;
+        color: red;
+      }
     }
 
     p {
