--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,12 @@ body {
         }
       }
 
+      .loading {
+        font-size: .8rem;
+        text-align: center;
+        color: #090979;
+      }
+
       .error-auth {
         font-size: .8rem;
         text-align: center;
